fix: scrollbar height, frame around events, arrow bottom

--- a/uanimals/css/style.css
+++ b/uanimals/css/style.css
@@ -272,7 +272,7 @@ button:hover {
 }
 
 .tippy-box[data-placement^=top] > .tippy-svg-arrow {
-  bottom: 1px;
+  bottom: 7px;
 }
 
 .tippy-box[data-placement^=top] > .tippy-svg-arrow:after,
@@ -1848,6 +1848,7 @@ Sliders
 }
 
 .calendar__month {
+  padding: 0;
   justify-content: center;
   font-size: 1rem;
 }
@@ -1991,10 +1992,9 @@ div[data-tippy-root] {
 }
 
 .events {
-  padding: 40px 36px;
+  padding: 4px 36px;
   border-radius: 5px;
-  box-shadow: 0px 10px 20px rgba(19, 48, 55, 0.1);
-  max-width: 320px;
+  max-width: 100%;
   max-height: 412px;
   overflow-y: auto;
   /* width */
@@ -2087,6 +2087,10 @@ div[data-tippy-root] {
 
 .event__add-to-calendar::before {
   background-image: url("../img/add-icon.svg");
+}
+
+.tippy-content {
+  padding: 36px 5px;
 }
 
 .input-form__wrapper {
